Fix UI on Mobile (#103)

--- a/public/pages/home/SiteHomePage.scss
+++ b/public/pages/home/SiteHomePage.scss
@@ -9,6 +9,10 @@
   .fdr-idea-list {
     > .item {
       min-height: 105px;
+
+      .header {
+        max-width: 85%;
+      }
     }
     
     > .item > .content {
